--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,3 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+get_user_request:
+    path: /requests
+    controller: App\Controller\UserController::GetRequest
